@@ -52,6 +52,9 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Fixes for run context handling for 'cassandra-driver' instrumentation.
+  ({issues}2430[#2430])
+
 
 [[release-notes-3.28.0]]
 ==== 3.27.0 2022/01/17
